--- a/Plantonize.NotasFiscais.API/appsettings.Development.json
+++ b/Plantonize.NotasFiscais.API/appsettings.Development.json
@@ -2,7 +2,27 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Authentication": "Information"
     }
-  }
+  },
+  "MongoDBSettings": {
+    "ConnectionString": "mongodb+srv://ivannakatani_db_user:4ATXzTJWIOvRlNek@plantonize-cluster.tytzrfd.mongodb.net/?retryWrites=true&w=majority&appName=plantonize-cluster",
+    "DatabaseName": "VOcFcd0JIZaWirT2",
+    "NotasFiscaisCollectionName": "NotasFiscais",
+    "FaturasCollectionName": "Faturas",
+    "MunicipiosAliquotaCollectionName": "MunicipiosAliquota",
+    "ImpostosResumoCollectionName": "ImpostosResumo"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5113"
+      },
+      "Https": {
+        "Url": "https://localhost:7134"
+      }
+    }
+  },
+  "AllowedHosts": "*"
 }
