--- a/Plantonize.NotasFiscais.API/appsettings.json
+++ b/Plantonize.NotasFiscais.API/appsettings.json
@@ -9,6 +9,14 @@
     "ClientSecret": "Client secret from app-registration. Check user secrets/azure portal.",
     "ClientCertificates": []
   },
+  "MongoDBSettings": {
+    "ConnectionString": "mongodb+srv://ivannakatani_db_user:4ATXzTJWIOvRlNek@plantonize-cluster.tytzrfd.mongodb.net/?retryWrites=true&w=majority&appName=plantonize-cluster",
+    "DatabaseName": "VOcFcd0JIZaWirT2",
+    "NotasFiscaisCollectionName": "NotasFiscais",
+    "FaturasCollectionName": "Faturas",
+    "MunicipiosAliquotaCollectionName": "MunicipiosAliquota",
+    "ImpostosResumoCollectionName": "ImpostosResumo"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
