--- a/Plantonize.NotasFiscais.API/Plantonize.NotasFiscais.API.csproj
+++ b/Plantonize.NotasFiscais.API/Plantonize.NotasFiscais.API.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-Plantonize.NotasFiscais.API-bf35e15d-d02f-4df1-8f93-0cc971b48441</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,11 +18,15 @@
     <PackageReference Include="Microsoft.Identity.Web.MicrosoftGraph" Version="3.8.1" />
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="3.8.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+    <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Plantonize.NotasFiscais.Application\Plantonize.NotasFiscais.Application.csproj" />
+    <ProjectReference Include="..\Plantonize.NotasFiscais.Infrastructure\Plantonize.NotasFiscais.Infrastructure.csproj" />
+    <ProjectReference Include="..\Plantonize.NotasFiscais.Domain\Plantonize.NotasFiscais.Domain.csproj" />
   </ItemGroup>
 
 </Project>
