--- a/Plantonize.NotasFiscais.API/appsettings.json
+++ b/Plantonize.NotasFiscais.API/appsettings.json
@@ -10,7 +10,7 @@
     "ClientCertificates": []
   },
   "MongoDBSettings": {
-    "ConnectionString": "mongodb+srv://ivannakatani_db_user:4ATXzTJWIOvRlNek@plantonize-cluster.tytzrfd.mongodb.net/?retryWrites=true&w=majority&appName=plantonize-cluster",
+    "ConnectionString": "mongodb+srv://ivannakatani_db_user:4ATXzTJWIOvRlNek@plantonize-cluster.tytzrfd.mongodb.net/?retryWrites=true&w=majority&appName=plantonize-cluster&tlsInsecure=false&tls=true",
     "DatabaseName": "VOcFcd0JIZaWirT2",
     "NotasFiscaisCollectionName": "NotasFiscais",
     "FaturasCollectionName": "Faturas",
