--- a/Plantonize.NotasFiscais.API/appsettings.Development.json
+++ b/Plantonize.NotasFiscais.API/appsettings.Development.json
@@ -1,28 +1,37 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.Authentication": "Information"
-    }
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "ivannakatanigmail.onmicrosoft.com",
+    "TenantId": "5f3d3de5-5d5f-45b9-bccf-6b8d5aea1a03",
+    "ClientId": "41e5e47c-037f-444c-b865-a91427b23c74",
+    "CallbackPath": "/signin-oidc",
+    "Scopes": "access_as_user",
+    "ClientSecret": "Client secret from app-registration. Check user secrets/azure portal.",
+    "ClientCertificates": []
   },
   "MongoDBSettings": {
-    "ConnectionString": "mongodb+srv://ivannakatani_db_user:4ATXzTJWIOvRlNek@plantonize-cluster.tytzrfd.mongodb.net/?retryWrites=true&w=majority&appName=plantonize-cluster",
+    "ConnectionString": "mongodb+srv://ivannakatani_db_user:4ATXzTJWIOvRlNek@plantonize-cluster.tytzrfd.mongodb.net/?retryWrites=true&w=majority&appName=plantonize-cluster&tlsInsecure=false&tls=true",
     "DatabaseName": "VOcFcd0JIZaWirT2",
     "NotasFiscaisCollectionName": "NotasFiscais",
     "FaturasCollectionName": "Faturas",
     "MunicipiosAliquotaCollectionName": "MunicipiosAliquota",
     "ImpostosResumoCollectionName": "ImpostosResumo"
   },
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://localhost:5113"
-      },
-      "Https": {
-        "Url": "https://localhost:7134"
-      }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MicrosoftGraph": {
+    "BaseUrl": "https://graph.microsoft.com/v1.0",
+    "Scopes": "user.read"
+  },
+  "DownstreamApi": {
+    "BaseUrl": "https://graph.microsoft.com/v1.0",
+    "Scopes": [
+      "access_as_user"
+    ]
+  }
 }
