Remove authentication; add Azure Service Bus integration
Authentication mechanisms, including JWT and Azure AD, were removed, making the API fully open. Swagger was enabled in all environments, including production.

Added Azure Service Bus integration for asynchronous processing:
- Introduced `ServiceBusSettings` for configuration.
- Created `IServiceBusService` and `ServiceBusService` for message handling.
- Updated `NotaFiscalService` to send messages to the `integracao-nf` queue.
- Defined `NotaFiscalServiceBusDto` for custom message formatting.
- Implemented parsers for address components, IBGE codes, and UF extraction.

Enhanced logging with `ILogger` and added error handling for Service Bus operations. Updated configuration files and registered Service Bus services in the DI container.

Added detailed documentation and PowerShell scripts for testing the Service Bus integration. Verified successful build and deployment readiness.

--- a/Plantonize.NotasFiscais.API/appsettings.Development.json
+++ b/Plantonize.NotasFiscais.API/appsettings.Development.json
@@ -7,6 +7,13 @@
     "MunicipiosAliquotaCollectionName": "MunicipiosAliquota",
     "ImpostosResumoCollectionName": "ImpostosResumo"
   },
+  "ServiceBusSettings": {
+    "ConnectionString": "Endpoint=sb://plantonize-servicebus.servicebus.windows.net/;SharedAccessKeyName=Ac;SharedAccessKey=kOtHcaLs19y9VuTzor2n45JTC0O3haEwW+ASbCw2IUo=",
+    "NotaFiscalQueueName": "integracao-nf",
+    "FaturaQueueName": "fatura-queue",
+    "NotaFiscalTopicName": "notafiscal-topic",
+    "FaturaTopicName": "fatura-topic"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
