--- a/Plantonize.NotasFiscais.API/appsettings.json
+++ b/Plantonize.NotasFiscais.API/appsettings.json
@@ -7,6 +7,13 @@
     "MunicipiosAliquotaCollectionName": "MunicipiosAliquota",
     "ImpostosResumoCollectionName": "ImpostosResumo"
   },
+  "ServiceBusSettings": {
+    "ConnectionString": "Endpoint=sb://plantonize-servicebus.servicebus.windows.net/;SharedAccessKeyName=Ac;SharedAccessKey=kOtHcaLs19y9VuTzor2n45JTC0O3haEwW+ASbCw2IUo=",
+    "NotaFiscalQueueName": "integracao-nf",
+    "FaturaQueueName": "fatura-queue",
+    "NotaFiscalTopicName": "notafiscal-topic",
+    "FaturaTopicName": "fatura-topic"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
