Introduce Vertical Slice Architecture (V2 API)
- Added MediatR and FluentValidation for CQRS and validation.
- Configured Swagger to document both v1 (Clean) and v2 (Slice).
- Implemented Vertical Slice Architecture for NotasFiscais feature.
- Added commands, handlers, validators, and endpoints for CRUD.
- Created `Plantonize.NotasFiscais.ArchitectureTests` project.
- Added architecture tests for layer dependencies and conventions.
- Documented Clean vs Vertical Slice in multiple markdown guides.
- Enhanced `README.md` with setup, architecture, and API details.
- Added unit tests for Vertical Slice handlers and Clean services.
- Improved project structure to enforce Clean Architecture rules.

--- a/Plantonize.NotasFiscais.API/Plantonize.NotasFiscais.API.csproj
+++ b/Plantonize.NotasFiscais.API/Plantonize.NotasFiscais.API.csproj
@@ -11,6 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.10.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.20" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.20" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.Identity.Web" Version="3.8.1" />
